k8s/apps/overlays/prod/patches/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openpanel-worker
  namespace: openpanel
spec:
  replicas: 2
